--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 body {
   background: white;
 }
-/* 
+
 li {
   list-style: none;
   cursor: pointer;
@@ -23,11 +23,12 @@ li:hover::before {
   content: "";
   height: 4px;
   width: 100%;
-  background: white;
+  background: #2a68ff;
   right: 0;
+  bottom: -10px;
   color: #2a68ff;
 }
-
+/* 
 .icon {
   cursor: pointer;
 }
