--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ li:hover::before {
 .icon {
   cursor: pointer;
 }
-/* 
+
 .card {
-  background: #000;
-} */
+  background: rgb(234, 233, 249);
+}
